--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "styled-components": "^5.0.1",
+    "uuid": "^7.0.2",
     "yup": "^0.28.1"
   },
   "scripts": {
